# FFNeuralNet

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  CostFunction.cpp  CostFunction.h  CostFunction_old.cpp  CostFunction_old.h  CrossEntropyCostFunction.cpp  CrossEntropyCostFunction.h  CustomEnums.h  Dataset.h  FeedforwardNeuralNetwork.cpp  FeedforwardNeuralNetwork.cpp.backup  FeedforwardNeuralNetwork.h  QuadraticCostFunction.cpp  QuadraticCostFunction.h  main.cpp
src/src/: Makefile  cmake_install.cmake
src/tests/: Makefile  cmake_install.cmake
tests/: CMakeLists.txt  main_test.cpp  test_FFNet.cpp  test_backpropagation.cpp
